name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , common
               , frontend
               , obelisk-backend
               , aeson
               , beam-core
               , beam-sqlite
               , bytestring
               , lens
               , sqlite-simple
               , split
               , text
               , time
               , reflex-dom-core
               , obelisk-backend
               , dependent-sum
               , dependent-sum-template
               , mmark
               , modern-uri
               , yaml
               , directory
               , filepath
               , foldl
               , snap
  exposed-modules:
    Backend
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , aeson
               , split
               , common
               , frontend
               , lens
               , modern-uri
               , bytestring
               , beam-core
               , beam-sqlite
               , sqlite-simple
               , obelisk-backend
               , obelisk-executable-config
               , obelisk-executable-config-inject
               , text
               , time
               , reflex-dom-core
               , obelisk-backend
               , dependent-sum
               , dependent-sum-template
               , mmark
               , modern-uri
               , yaml
               , directory
               , filepath
               , foldl
               , snap
