name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , common
               , frontend
               , obelisk-oauth-backend
               , obelisk-oauth-common
               , obelisk-backend
               , aeson
               , beam-core
               , beam-sqlite
               , bytestring
               , lens
               , sqlite-simple
               , split
               , text
               , time
               , http-client
               , http-client-tls
               , clientsession
               , obelisk-route
               , obelisk-executable-config
               , reflex-dom-core
               , obelisk-backend
               , dependent-sum
               , dependent-sum-template
               , safe-exceptions
               , mmark
               , modern-uri
               , pagination
               , yaml
               , directory
               , filepath
               , foldl
               , snap
  exposed-modules:
    Backend
    Backend.Config
    Backend.Login
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , aeson
               , split
               , common
               , frontend
               , lens
               , modern-uri
               , safe-exceptions
               , bytestring
               , beam-core
               , beam-sqlite
               , sqlite-simple
               , obelisk-oauth-backend
               , obelisk-oauth-common
               , obelisk-backend
               , obelisk-executable-config
               , obelisk-executable-config-inject
               , http-client
               , http-client-tls
               , clientsession
               , obelisk-route
               , obelisk-executable-config
               , text
               , time
               , reflex-dom-core
               , obelisk-backend
               , dependent-sum
               , dependent-sum-template
               , mmark
               , modern-uri
               , pagination
               , yaml
               , directory
               , filepath
               , foldl
               , snap
