name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , aeson
               , beam-core
               , beam-sqlite
               , bytestring
               , clientsession
               , containers
               , common
               , dependent-sum
               , dependent-sum-template
               , directory
               , filepath
               , foldl
               , frontend
               , http-client
               , http-client-tls
               , lens
               , megaparsec
               , mmark
               , modern-uri
               , obelisk-backend
               , obelisk-backend
               , obelisk-executable-config
               , obelisk-oauth-backend
               , obelisk-oauth-common
               , obelisk-route
               , pagination
               , profunctors
               , reflex-dom-core
               , safe-exceptions
               , snap
               , split
               , sqlite-simple
               , text
               , time
               , yaml
               , zip
  exposed-modules:
    Backend
    Backend.Config
    Backend.Login
    Backend.Import
    Backend.Search
    Backend.Search.Parser
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , aeson
               , backend
               , beam-core
               , beam-sqlite
               , bytestring
               , clientsession
               , containers
               , common
               , dependent-sum
               , dependent-sum-template
               , directory
               , filepath
               , foldl
               , frontend
               , http-client
               , http-client-tls
               , lens
               , megaparsec
               , mmark
               , modern-uri
               , modern-uri
               , obelisk-backend
               , obelisk-backend
               , obelisk-executable-config
               , obelisk-executable-config
               , obelisk-executable-config-inject
               , obelisk-oauth-backend
               , obelisk-oauth-common
               , obelisk-route
               , pagination
               , profunctors
               , reflex-dom-core
               , safe-exceptions
               , snap
               , split
               , sqlite-simple
               , text
               , time
               , yaml
               , zip
