name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: aeson
               , base
               , bytestring
               , containers
               , dependent-sum
               , dependent-sum-template
               , obelisk-route
               , mtl
               , text
               , these
               , universe
               , reflex
               , filepath
               , template-haskell
               , time
               , universe-template
               , beam-core
               , casing

  exposed-modules:
    Common.Route
    Common.Slack.Types
    Common.Slack.Internal
  ghc-options: -Wall
