name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: aeson
               , base
               , beam-core
               , bytestring
               , casing
               , containers
               , dependent-sum
               , dependent-sum-template
               , filepath
               , mtl
               , obelisk-oauth-common
               , obelisk-route
               , pagination
               , reflex
               , template-haskell
               , text
               , these
               , time
               , universe
               , universe-template

  exposed-modules:
    Common.Route
    Common.Slack.Types
    Common.Slack.Types.Auth
    Common.Slack.Internal
  ghc-options: -Wall
