name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , common
               , reflex-dom
               , static
               , text
               , string-conv
               , obelisk-route
               , obelisk-frontend
               , clay
               , time
               , modern-uri
               , jsaddle
               , mtl
  exposed-modules:
    Frontend
  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src
  build-depends: base
               , common
               , reflex-dom
               , static
               , text
               , frontend
               , string-conv
               , obelisk-route
               , obelisk-frontend
               , clay
               , time
               , modern-uri
               , jsaddle
               , mtl
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
