name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , clay
               , common
               , containers
               , dependent-sum
               , ghcjs-dom
               , jsaddle
               , lens
               , modern-uri
               , mtl
               , obelisk-executable-config-frontend
               , obelisk-frontend
               , obelisk-generated-static
               , obelisk-oauth-common
               , obelisk-route
               , pagination
               , reflex-dom
               , string-conv
               , text
               , time
               , jsaddle-dom
  exposed-modules:
    Frontend
    Frontend.Util
    Frontend.Message
  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src
  build-depends: base
               , clay
               , common
               , containers
               , dependent-sum
               , frontend
               , ghcjs-dom
               , jsaddle
               , lens
               , modern-uri
               , mtl
               , obelisk-executable-config-frontend
               , obelisk-frontend
               , obelisk-generated-static
               , obelisk-oauth-common
               , obelisk-route
               , pagination
               , reflex-dom
               , string-conv
               , text
               , time
               , jsaddle-dom
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
